# libfacereg

./: CMakeLists.txt  FaceLib.cpp  FaceLib.h  README.md  main.cpp
Driver/: CMakeLists.txt
FaceLib/: CMakeLists.txt  FaceLib.cpp  main.cpp
